--- a/packages/react-devtools-shared/src/devtools/views/root.css
+++ b/packages/react-devtools-shared/src/devtools/views/root.css
@@ -44,10 +44,12 @@
   --light-color-component-badge-background-inverted: rgba(255, 255, 255, 0.25);
   --light-color-component-badge-count: #777d88;
   --light-color-component-badge-count-inverted: rgba(255, 255, 255, 0.7);
+  --light-color-console-error-badge-text: #ffffff;
   --light-color-console-error-background: #fff0f0;
   --light-color-console-error-border: #ffd6d6;
   --light-color-console-error-icon: #eb3941;
   --light-color-console-error-text: #fe2e31;
+  --light-color-console-warning-badge-text: #000000;
   --light-color-console-warning-background: #fffbe5;
   --light-color-console-warning-border: #fff5c1;
   --light-color-console-warning-icon: #f4bd00;
@@ -129,10 +131,12 @@
   --dark-color-component-badge-background-inverted: rgba(0, 0, 0, 0.25);
   --dark-color-component-badge-count: #8f949d;
   --dark-color-component-badge-count-inverted: rgba(255, 255, 255, 0.7);
+  --dark-color-console-error-badge-text: #000000;
   --dark-color-console-error-background: #290000;
   --dark-color-console-error-border: #5c0000;
   --dark-color-console-error-icon: #eb3941;
   --dark-color-console-error-text: #fc7f7f;
+  --dark-color-console-warning-badge-text: #000000;
   --dark-color-console-warning-background: #332b00;
   --dark-color-console-warning-border: #665500;
   --dark-color-console-warning-icon: #f4bd00;
